@@ -2,6 +2,7 @@ package org.jsoup.nodes;
 
 import org.apache.commons.lang.StringEscapeUtils;
 import org.apache.commons.lang.Validate;
+import org.apache.commons.lang.StringUtils;
 
 /**
  A text node.
@@ -32,6 +33,14 @@ public class TextNode extends Node {
      */
     public String getWholeText() {
         return attributes.get(TEXT_KEY);
+    }
+
+    /**
+     Test if this text node is blank -- that is, empty or only whitespace (including newlines).
+     @return true if this document is empty or only whitespace, false if it contains any text content.
+     */
+    public boolean isBlank() {
+        return StringUtils.isBlank(normaliseWhitespace(getWholeText()));
     }
 
     void outerHtml(StringBuilder accum) {
