@@ -1,0 +1,25 @@
+package org.jsoup.nodes;
+
+import org.junit.Test;
+
+import static org.junit.Assert.*;
+
+/**
+ Test TextNodes
+
+ @author Jonathan Hedley, jonathan@hedley.net */
+public class TextNodeTest {
+    @Test public void testBlank() {
+        TextNode one = new TextNode("", "");
+        TextNode two = new TextNode("     ", "");
+        TextNode three = new TextNode("  \n\n   ", "");
+        TextNode four = new TextNode("Hello", "");
+        TextNode five = new TextNode("  \nHello ", "");
+
+        assertTrue(one.isBlank());
+        assertTrue(two.isBlank());
+        assertTrue(three.isBlank());
+        assertFalse(four.isBlank());
+        assertFalse(five.isBlank());
+    }
+}
